--- a/trainingEnglish/style.css
+++ b/trainingEnglish/style.css
@@ -27,10 +27,10 @@ body{
     position: absolute;
     margin: auto;
 }
-.resp{
+.area_UI{
     padding: 6rem;
 }
-.but{
+#button{
     background-color: #5C5E5E;
     color: rgb(224, 223, 220);
     display: block;
@@ -39,7 +39,7 @@ body{
     border: none;
     cursor: pointer;
 }
-.but:active{
+#button:active{
     opacity: 0.6;
 }
 h1{
@@ -53,7 +53,7 @@ h1{
     position: absolute;
     font-size: 3rem;
 }
-#frase{
+#word{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,7 +62,7 @@ h1{
     color: rgb(224, 223, 220);
     font-size: 2rem;
 }
-.box{
+.answer_box{
     background-color: #5C5E5E;
     color: rgb(224, 223, 220);
     display: flex;
