--- a/trainingEnglish/style.css
+++ b/trainingEnglish/style.css
@@ -112,10 +112,20 @@ a:visited{
 .corrects{
     margin-right: 30rem;
     margin-bottom: 20rem;
-    color: rgb(28, 29, 29);
+    color: rgb(224, 223, 220);
+    background-color: rgb(28, 29, 29);
+    width: 100px;
+    max-width: 100%;
+    border-radius: 25px;
+    border: solid #5C5E5E 2px;
 }
 .wrongs{
     margin-left: 30rem;
     margin-bottom: 20rem;
-    color: rgb(28, 29, 29);
+    color: rgb(224, 223, 220);
+    background-color: rgb(28, 29, 29);
+    width: 100px;
+    max-width: 100%;
+    border-radius: 25px;
+    border: solid #5C5E5E 2px;
 }
