--- a/trainingEnglish/style.css
+++ b/trainingEnglish/style.css
@@ -105,7 +105,7 @@ a:visited{
     text-align: center;
     margin-left: 60rem;
     margin-bottom: 20rem;
-    color: rgb(224, 223, 220);
+    color: #cc0000;
     background-color: rgb(28, 29, 29);
     width: 100px;
     max-width: 100%;
