--- a/Trabalho Web/scss/main.css
+++ b/Trabalho Web/scss/main.css
@@ -10,14 +10,14 @@ body{
   height: 100vh;
 }
 .margem{
-  margin: 3px;
+  margin: 5px;
 }
 .margem-top{
   margin-top: 5px;
   margin-bottom: 5px;
 }
 .white{
-  color: white;
+  color: #fff;
 }
 .childFund{
   border-top: solid 2px #000;
@@ -30,6 +30,19 @@ body{
 }
 .links:hover{
   color: #0d6efd;
+}
+.form{
+  border-color: #fff;
+}
+.botao{
+  border-radius: 5px;
+  border: none;
+  background-color: #4DA6FF;
+  color: #fff;
+  padding: 0.5rem;
+}
+.botao:hover{
+  opacity: 0.7;
 }
 /*!
  * Bootstrap  v5.3.0 (https://getbootstrap.com/)
