--- a/trainingEnglish/style.css
+++ b/trainingEnglish/style.css
@@ -51,7 +51,11 @@ body{
 #life{
     color: #cc0000;
 }
+#life_html{
+    visibility: hidden;
+}
 .answer_box{
+    visibility: hidden;
     background-color: #5C5E5E;
     color: rgb(224, 223, 220);
     border: hidden;
@@ -107,13 +111,19 @@ a:visited{
         margin: 0
     }
     .area_UI{
+        max-width: 100vw;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         gap: 2rem;
         padding: 1.5rem;
     }
+    #word{
+        font-size: 1rem;
+    }
     #button{
+        visibility: hidden;
         display: block;
         block-size: 100%;
         width: 100%;
@@ -146,6 +156,32 @@ a:visited{
     }
     .help-hover:active{
         opacity: 0.8;
+    }
+    .difficulty{
+        grid-row: 3;
+        grid-column: 4;
+    }
+    .dif_area{
+        align-items: stretch;
+        background-color: rgb(28, 29, 29);
+        padding: 3px;
+        border-radius: 12px;
+        display: flex;
+        flex-direction: column;
+    }
+    .dif_button{
+        padding: 3px;
+        background-color: #5C5E5E;
+        color: rgb(224, 223, 220);
+        border: none;
+        cursor: pointer;
+        border-radius: 30px;
+        margin: 3px 0px;
+        font-size: 0.8rem;
+    }
+    .dif_button:active{
+        color: #0080ff;
+        background-color: rgb(224, 223, 220);
     }
 }
 @media (min-width: 720px){
@@ -186,7 +222,11 @@ a:visited{
         gap: 2rem;
         padding: 1.5rem;
     }
+    #word{
+        font-size: 2rem;
+    }
     #button{
+        visibility: hidden;
         display: block;
         block-size: 100%;
         width: 100%;
@@ -219,6 +259,30 @@ a:visited{
     }
     .help-hover:active{
         opacity: 0.8;
+    }
+    .difficulty{
+        grid-row: 3;
+        grid-column: 5/6;
+    }
+    .dif_area{
+        background-color: rgb(28, 29, 29);
+        padding: 8px;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: row;
+    }
+    .dif_button{
+        padding: 6px;
+        background-color: #5C5E5E;
+        color: rgb(224, 223, 220);
+        border: solid 1px #5C5E5E;
+        cursor: pointer;
+        border-radius: 50px;
+        margin: 0px 2px;
+    }
+    .dif_button:active{
+        color: #0080ff;
+        background-color: rgb(224, 223, 220);
     }
 }
 @media (min-width: 2560px){
@@ -261,7 +325,11 @@ a:visited{
         gap: 4rem;
         padding: 5rem;
     }
+    #word{
+        font-size: 2rem;
+    }
     #button{
+        visibility: hidden;
         display: block;
         block-size: 100%;
         width: 100%;
@@ -301,6 +369,7 @@ a:visited{
         font-size: 2rem;
         cursor: pointer;
         transition: padding 0.5s;
+        font-size: 2.5rem;
     }
     .help-hover:hover{
         position: relative;
@@ -309,5 +378,30 @@ a:visited{
     }
     .help-hover:active{
         opacity: 0.8;
+    }
+    .difficulty{
+        grid-row: 3;
+        grid-column: 5/6;
+    }
+    .dif_area{
+        background-color: rgb(28, 29, 29);
+        padding: 15px;
+        border-radius: 40px;
+        display: flex;
+        flex-direction: row;
+    }
+    .dif_button{
+        padding: 15px;
+        background-color: #5C5E5E;
+        color: rgb(224, 223, 220);
+        border: solid 1px #5C5E5E;
+        cursor: pointer;
+        border-radius: 35px;
+        margin: 0px 6px;
+        font-size: 2rem;
+    }
+    .dif_button:active{
+        color: #0080ff;
+        background-color: rgb(224, 223, 220);
     }
 }
